RESOLVED FIXED109780
[Regression] After r142831 collection-null-like-arguments.html layout test failing
https://bugs.webkit.org/show_bug.cgi?id=109780
Summary [Regression] After r142831 collection-null-like-arguments.html layout test f...
Vineet Chaudhary (vineetc)
Reported 2013-02-13 19:37:28 PST
After r142831: LayoutTests/fast/dom/collection-null-like-arguments.html is failing for JSC bindings.
Attachments
patch (4.27 KB, patch)
2013-02-13 19:52 PST, Vineet Chaudhary (vineetc)
no flags
Vineet Chaudhary (vineetc)
Comment 1 2013-02-13 19:52:13 PST
Created attachment 188251 [details] patch As per specification only for namedItem() it should return null if collection is empty. @r142831 caused regression because it was returning null from getNamedItems() directly.
Kentaro Hara
Comment 2 2013-02-13 19:54:10 PST
Comment on attachment 188251 [details] patch Looks reasonable. Thanks for the quick fix.
WebKit Review Bot
Comment 3 2013-02-13 20:19:20 PST
Comment on attachment 188251 [details] patch Clearing flags on attachment: 188251 Committed r142846: <http://trac.webkit.org/changeset/142846>
WebKit Review Bot
Comment 4 2013-02-13 20:19:23 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.