[Regression] After r142831  collection-null-like-arguments.html layout test failing https://bugs.webkit.org/show_bug.cgi?id=109780

Reviewed by Kentaro Hara.

No new tests. LayoutTests/fast/dom/collection-null-like-arguments.html
Should pass now.

* bindings/js/JSHTMLAllCollectionCustom.cpp: Return null for namedItem() only.
(WebCore::getNamedItems):
(WebCore::JSHTMLAllCollection::namedItem):
* bindings/js/JSHTMLFormControlsCollectionCustom.cpp: Ditto.
(WebCore::getNamedItems):
(WebCore::JSHTMLFormControlsCollection::namedItem):
* bindings/js/JSHTMLOptionsCollectionCustom.cpp: Ditto.
(WebCore::getNamedItems):
(WebCore::JSHTMLOptionsCollection::namedItem):


Canonical link: https://commits.webkit.org/128066@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142846 268f45cc-cd09-0410-ab3c-d52691b4dbfc