Source/WebCore/bindings/js/JSHTMLAllCollectionCustom.cpp
@@ -46,7 +46,7 @@ static JSValue getNamedItems(ExecState* exec, JSHTMLAllCollection* collection, P
     collection->impl()->namedItems(propertyNameToAtomicString(propertyName), namedItems);
 
     if (namedItems.isEmpty())
-        return jsNull();
+        return jsUndefined();
     if (namedItems.size() == 1)
         return toJS(exec, collection->globalObject(), namedItems[0].get());
 
@@ -116,7 +116,8 @@ JSValue JSHTMLAllCollection::item(ExecState* exec)
 
 JSValue JSHTMLAllCollection::namedItem(ExecState* exec)
 {
-    return getNamedItems(exec, this, Identifier(exec, exec->argument(0).toString(exec)->value(exec)));
+    JSValue value = getNamedItems(exec, this, Identifier(exec, exec->argument(0).toString(exec)->value(exec)));
+    return value.isUndefined() ? jsNull() : value;
 }
 
 } // namespace WebCore
